--- a/projectoop2.csproj
+++ b/projectoop2.csproj
@@ -191,5 +191,11 @@
   <ItemGroup>
     <None Include="Resources\icons8-male-user-48.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-eye-48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-eye-24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
