--- a/packages.config
+++ b/packages.config
@@ -4,7 +4,7 @@
   <package id="Azure.Identity" version="1.13.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Cryptography" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="6.1.0-preview1.25120.4" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="6.0.2" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="6.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="8.0.1" targetFramework="net472" />
